force-app/main/default/objects/Lead/fields/Doc_Required__c.field-meta.xml
<CustomField>
    <fullName>Doc_Required__c</fullName>
    <formula>IF( ISPICKVAL( LeadSource , &apos;FACEBOOK&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;FB LEAD ADS&apos;) , &apos;NOT REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;INBOUND EMAIL&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;INBOUND PHONE CALL&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;INDIAMART&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;ONLINE CAMPAIGNING&apos;) , &apos;NOT REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;PAY PER CLICK ADS&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;WEBSITE&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;WHATSAPP CAMPAIGNING&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;EMAIL CAMPAIGNING&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;OFFLINE CRM&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;Offline Marketing&apos;) , &apos;NOT REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;OUTBOUND PHONE CALL&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;EVENT ACTIVATION&apos;) , &apos;NOT REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;TENDER&apos;) , &apos;REQUIRED&apos;,
IF( ISPICKVAL( LeadSource , &apos;CRM RESOUCE&apos;) , &apos;NOT REQUIRED&apos;,
&apos;&apos;))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Required?</label>
    <type>Text</type>
</CustomField>