force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fake Enquiry</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Customer Details Not Received</fullName>
            </value>
            <value>
                <fullName>Not Looking for This Product</fullName>
            </value>
            <value>
                <fullName>Out of Service Area</fullName>
            </value>
            <value>
                <fullName>Minimum Quantity Not Met</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Price Enquiry</fullName>
            </value>
            <value>
                <fullName>Purchase from Other Brand</fullName>
            </value>
            <value>
                <fullName>Internal Problem</fullName>
            </value>
            <value>
                <fullName>Future Prospect</fullName>
            </value>
            <value>
                <fullName>Not Responding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>