force-app/main/default/objects/Lead/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>