force-app/main/default/objects/Lead/fields/Previous_Source__c.field-meta.xml
<CustomField>
    <fullName>Previous_Source__c</fullName>
    <label>Previous Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>FB LEAD ADS</fullName>
            </value>
            <value>
                <fullName>INBOUND EMAIL</fullName>
            </value>
            <value>
                <fullName>INBOUND PHONE CALL</fullName>
            </value>
            <value>
                <fullName>INDIAMART</fullName>
            </value>
            <value>
                <fullName>ONLINE CAMPAIGNING</fullName>
            </value>
            <value>
                <fullName>PAY PER CLICK ADS</fullName>
            </value>
            <value>
                <fullName>WEBSITE BOT CHAT</fullName>
            </value>
            <value>
                <fullName>WHATSAPP CAMPAIGNING</fullName>
            </value>
            <value>
                <fullName>EMAIL CAMPAIGNING</fullName>
            </value>
            <value>
                <fullName>OUTBOUND PHONE CALL</fullName>
            </value>
            <value>
                <fullName>EVENT ACTIVATION</fullName>
            </value>
            <value>
                <fullName>OFFLINE CRM</fullName>
            </value>
            <value>
                <fullName>TENDER</fullName>
            </value>
            <value>
                <fullName>CRM RESOUCE</fullName>
            </value>
            <value>
                <fullName>Offline Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>