force-app/main/default/objects/Lead/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Mast</fullName>
            </value>
            <value>
                <fullName>Flag Mast</fullName>
            </value>
            <value>
                <fullName>Stadium Mast</fullName>
            </value>
            <value>
                <fullName>Solar Mast</fullName>
            </value>
            <value>
                <fullName>Solar Pole</fullName>
            </value>
            <value>
                <fullName>CCTV Pole</fullName>
            </value>
            <value>
                <fullName>Steel Tubular Poles</fullName>
            </value>
            <value>
                <fullName>Swaged Poles</fullName>
            </value>
            <value>
                <fullName>HDPE Pipes</fullName>
            </value>
            <value>
                <fullName>PLB Duct</fullName>
            </value>
            <value>
                <fullName>LLDP Pipe</fullName>
            </value>
            <value>
                <fullName>MDPE pipe</fullName>
            </value>
            <value>
                <fullName>PEB Structure</fullName>
            </value>
            <value>
                <fullName>Wearehouse structure</fullName>
            </value>
            <value>
                <fullName>Shed Structure</fullName>
            </value>
            <value>
                <fullName>Storage Buildings</fullName>
            </value>
            <value>
                <fullName>Godown Structure</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Casing Pipes</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>Garden Pipes</fullName>
            </value>
            <value>
                <fullName>Agricultaral Pipes</fullName>
            </value>
            <value>
                <fullName>Borewell Pipes</fullName>
            </value>
            <value>
                <fullName>Water Tank</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>W Beam</fullName>
            </value>
            <value>
                <fullName>Thrie Beam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>