force-app/main/default/objects/Lead/fields/Prospect_Prospecting__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Prospecting__c</fullName>
    <label>Prospect/Prospecting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>