force-app/main/default/objects/Lead/fields/Remarks_for_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Follow_up__c</fullName>
    <label>Remarks for Follow up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>