force-app/main/default/objects/Lead/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metric Ton</fullName>
            </value>
            <value>
                <fullName>Kgs</fullName>
            </value>
            <value>
                <fullName>Pcs</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Alternative Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>