force-app/main/default/objects/Lead/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <businessProcess>Lead process</businessProcess>
    <label>Lead</label>
</RecordType>