force-app/main/default/objects/Lead/validationRules/Lead_Qualified_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Qualified_Mandatory_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(Status, &quot;Qualified&quot;),
    OR(
        ISBLANK(City),
        ISBLANK(State),
        ISBLANK(Country),
        ISBLANK(Company),
        ISPICKVAL(Customer_Category__c, &quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>City, State, Country, Company, Customer Category is mandatory to Qualify a Lead</errorMessage>
</ValidationRule>