force-app/main/default/objects/Lead/listViews/Department_Crash_Barrier_Products.listView-meta.xml
<ListView>
    <fullName>Department_Crash_Barrier_Products</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Crash Barrier Products</value>
    </filters>
    <label>Department - Crash Barrier Products</label>
</ListView>