force-app/main/default/objects/Lead/listViews/Department_HDPE_Products.listView-meta.xml
<ListView>
    <fullName>Department_HDPE_Products</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>HDPE Products</value>
    </filters>
    <label>Department - HDPE Products</label>
</ListView>