force-app/main/default/objects/Lead/listViews/Dept_Pre_Engineering_Buildings_Product.listView-meta.xml
<ListView>
    <fullName>Dept_Pre_Engineering_Buildings_Product</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Pre Engineering Buildings Products</value>
    </filters>
    <label>Dept - Pre Engineering Buildings Product</label>
</ListView>