force-app/main/default/objects/Lead/listViews/Dept_Railway_Electrification_Structure.listView-meta.xml
<ListView>
    <fullName>Dept_Railway_Electrification_Structure</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Railway Electrification Structure Products</value>
    </filters>
    <label>Dept - Railway Electrification Structure</label>
</ListView>